--- a/Car Sales Analysis-checkpoint.ipynb
+++ b/Car Sales Analysis-checkpoint.ipynb
@@ -2814,7 +2814,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2904,7 +2903,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3095,6 +3093,23 @@
     "- Wheel base and size of the vehicle are also positively correlated, and engine size and horsepower of the vehicle are also highly correlated to each other, hence auto makers must factors that are highly positively correlated while manufacturing cars. (From section 4.11)\n",
     "- The curb-weight is high for vehicles that have engine type of 'l' within them that shall impact on the performance of the vehicles. (From section 4.10)\n",
     "- The average price of the vehicle is calculated as 13150.30$ in the market. (From section 4.4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('hello')"
    ]
   }
  ],
